2019-03-31 James Phillips <james@jamesphillipsuk.com>
	*main.c: Included ncurses.h for the text editing interface.
	Implemented NCurses in the rewriteFile() function.
	Renamed printFile() to getFileContents() - it no longer needs to print the file, but it does still need to get the file's contents.
	Moved file content printing to rewriteFile() as it can do so via NCurses, I'll probably separate this out again later.
	Removed auto-filling files with Hello World message as I'm preparing to do the function to allow users to write a message.

	*CHANGELOG: Documented recent changes.

2019-03-29 James Phillips <james@jamesphillipsuk.com>
	*main.c: printFile() now uses our textFile, and nothing is printed directly to the screen from the file without being saved in the textFile first.
	Aviate now takes argv parameters from the user regardless of whether or not they capitalise the first letter.
	Moved the declaration of the textFile used when reading a file, so it can be used for altering a file as well.
	Done the same for when writing a file.
	Created function saveFile() for saving a file.  Not yet implemented.
	Began to frame out how rewriteFile() will be used.
	Added initialiseTextFile() to ensure the structure which holds our file is always initialised and stop any malloc()ing bugs.
	saveFile() now uses write access.
	rewriteFile() now writes text to the file.  For now, it just writes "Hello, World!" - but that'll change soon.

	*CHANGELOG: Documented recent changes.

2019-03-28 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added typedef and struct for handling text files, called "textFile".
	Implemented textFile in printFile() to copy the file to the struct.
	
	*CHANGELOG: Documented recent changes.
	
	2019-03-27 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added further code documentation.
	Fixed some dates.
	Added overwrite protection to file writing.
	
	*CHANGELOG: Documented recent changes.

	*.gitignore: Added .gitignore
